rubocop/examples/good/style_Proc.rb
# Prefer proc over Proc.new.

# good
p = proc { |n| puts n }
