rubocop/examples/bad/style_Proc.rb
# Prefer proc over Proc.new.

# bad
p = Proc.new { |n| puts n }
